...
    <string name="profile_dialog_error_retry">Sim, Queimar Tudo</string>
    <string name="profile_dialog_error_cancel">Voltar ao Trono</string>
    <!-- Profile -->
    <string name="profile_choose_heraldry">Escolha seu avatar:</string>
    <string name="profile_banquet_chronicles_title">CRÔNICAS DE BANQUETES</string>
    <string name="profile_empty_history_desc">Nenhuma compra registrada nos pergaminhos reais.</string>
    <string name="profile_btn_delete_account">🔥 QUEIMAR LINHAGEM (EXCLUIR CONTA)</string>
    <string name="profile_order_prefix">Ordem Real</string>
    <string name="profile_label_new_name">Novo Título</string>
    <string name="profile_label_new_email">Novo E-mail</string>
    <string name="profile_section_security_title">Configurações de Segurança</string>
    <string name="profile_btn_reset_password">Redefinir Senha</string>
    <string name="profile_btn_see_all_records">Ver todos os registros</string>
    <string name="profile_desc_royal_effigy">Efígie Real</string>
    <string name="profile_desc_change_photo">Trocar Foto</string>
    <string name="profile_desc_edit_name">Editar Nome</string>
    <string name="profile_desc_edit_email">Editar E-mail</string>
...
